Fixed red x button on safari

--- a/static/style.css
+++ b/static/style.css
@@ -225,6 +225,10 @@ input[type="text"], textarea, #profile-name {
     margin-right: 10px;
 }
 
+#edit-profile-list textarea{
+    width: 100%;
+}
+
 
 #edit-profile-headers {
     width: 340;
